<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>keyboard</name>
  <version>1.1.0</version>
  <description>Publishes keyboard key presses to ROS 2.</description>

  <author email="phreakuencies@gmail.com">v01d</author>
  <author email="christopher.mower@kcl.ac.uk">cmower</author>
  <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend>   -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sdl</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>  
  <depend>std_msgs</depend>
  <depend>keyboard_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
